start page finished

--- a/start.html
+++ b/start.html
@@ -13,6 +13,7 @@
     <header class="header">
         <section class="header__login-bag">
             <h1 class="header__login-bag__logo">Template</h1>
+            <h1 class="header__login-bag__logo--mobile">TL</h1>
             <div class="header__login-bag__wrapper">
                 <a href="#" class="header__login-bag__login">E-mail sing up</a>
                 <a href="#" class="header__login-bag__bag__wrapper">
@@ -21,17 +22,26 @@
                     <p class="header__login-bag__bag__text">Bag (0)</p>
                 </a>
             </div>
+            <div class="header__burger">&#8801;</div>
         </section>
         <nav class="header__menu">
             <ul class="header__menu__list">
-                <li class="header__menu__list__element"><a href="#">Women</a></li>
-                <li class="header__menu__list__element"><a href="#">Men</a></li>
-                <li class="header__menu__list__element"><a href="#">Handbags</a></li>
-                <li class="header__menu__list__element"><a href="#">Accessories</a></li>
-                <li class="header__menu__list__element"><a href="#">Sale</a></li>
-                <li class="header__menu__list__element"><a href="#">New Arrivals</a></li>
-                <li class="header__menu__list__element"><a href="#">Clearance</a></li>
-                <li class="header__menu__list__element"><a href="#">Store Locator</a></li>
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="#">Women</a>
+                </li>
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="#">Men</a>
+                </li>
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link"
+                        href="#">Handbags</a></li>
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link"
+                        href="#">Accessories</a></li>
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="#">Sale</a>
+                </li>
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="#">New
+                        Arrivals</a></li>
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link"
+                        href="#">Clearance</a></li>
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="#">Store
+                        Locator</a></li>
             </ul>
             <form action="" class="header__menu__search">
                 <input type="search" placeholder="Style Name" class="header__menu__search__input">
@@ -146,20 +156,20 @@
             <nav class="footer__links">
                 <ul class="footer__links__list">
                     <h4 class="footer__links__list__heading">Quick Links</h4>
-                    <li class="footer__links__list__element">Store locator</li>
-                    <li class="footer__links__list__element">Gift cards</li>
-                    <li class="footer__links__list__element">Size guide</li>
-                    <li class="footer__links__list__element">About us</li>
-                    <li class="footer__links__list__element">Support</li>
+                    <li class="footer__links__list__element"><a href="#">Store locator</a></li>
+                    <li class="footer__links__list__element"><a href="#">Gift cards</a></li>
+                    <li class="footer__links__list__element"><a href="#">Size guide</a></li>
+                    <li class="footer__links__list__element"><a href="#">About us</a></li>
+                    <li class="footer__links__list__element"><a href="#">Support</a></li>
                 </ul>
                 <ul class="footer__links__list">
                     <h4 class="footer__links__list__heading">Customer Care</h4>
-                    <li class="footer__links__list__element">Customer service</li>
-                    <li class="footer__links__list__element">Track my order</li>
-                    <li class="footer__links__list__element">Return policy</li>
-                    <li class="footer__links__list__element">Shipping & delivery</li>
-                    <li class="footer__links__list__element">Contuct us</li>
-                    <li class="footer__links__list__element">Careers</li>
+                    <li class="footer__links__list__element"><a href="#">Customer service</a></li>
+                    <li class="footer__links__list__element"><a href="#">Track my order</a></li>
+                    <li class="footer__links__list__element"><a href="#">Return policy</a></li>
+                    <li class="footer__links__list__element"><a href="#">Shipping & delivery</a></li>
+                    <li class="footer__links__list__element"><a href="#">Contuct us</a></li>
+                    <li class="footer__links__list__element"><a href="#">Careers</a></li>
                 </ul>
             </nav>
             <div class="footer__info__contact">
@@ -176,12 +186,21 @@
                 </div>
                 <p class="footer__info__contact__delivery">We have our own delivery service which operates in 23 major
                     European cities. Delivery time - 3-5 days.</p>
-                    <a class= "footer__info__contact__social__link"  href="#">
+
+                <div class="footer__info__social__link__wrapper">
+                    <ul class="footer__share__list--mobile">
+                        <li class="footer__share__list__element"><a href="#">Legal notice</a></li>
+                        <li class="footer__share__list__element"><a href="#">Privacy policy</a></li>
+                        <li class="footer__share__list__element"><a href="#">Site map</a></li>
+                    </ul>
+                    <a class="footer__info__contact__social__link" href="#">
                         <img src="img/start/1300/fb.png" alt="facebook-ico">
                     </a>
-                    <a class= "footer__info__contact__social__link"  href="#">
+                    <a class="footer__info__contact__social__link" href="#">
                         <img src="img/start/1300/twi.png" alt="twitter-ico">
                     </a>
+                </div>
+
             </div>
         </section>
         <section class="footer__share">
