--- a/catalog.html
+++ b/catalog.html
@@ -4,8 +4,252 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catalog</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    
+<body class="body">
+    <header class="header">
+        <section class="header__login-bag">
+            <h1 class="header__login-bag__logo">Template</h1>
+            <h1 class="header__login-bag__logo--mobile">TL</h1>
+            <div class="header__login-bag__wrapper">
+                <a href="#" class="header__login-bag__login">E-mail sing up</a>
+                <a href="#" class="header__login-bag__bag__wrapper">
+                    <img class="header__login-bag__bag__icon" width="12" height="12" alt="bag-icon"
+                        src="img/start/1300/ico_bag.png">
+                    <p class="header__login-bag__bag__text">Bag (0)</p>
+                </a>
+            </div>
+            <div class="header__burger">&#8801;</div>
+        </section>
+        <nav class="header__menu">
+            <ul class="header__menu__list">
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="#">Women</a>
+                </li>
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="#">Men</a>
+                </li>
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link"
+                        href="#">Handbags</a></li>
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link"
+                        href="#">Accessories</a></li>
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="#">Sale</a>
+                </li>
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="#">New
+                        Arrivals</a></li>
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link"
+                        href="#">Clearance</a></li>
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="#">Store
+                        Locator</a></li>
+            </ul>
+            <form action="" class="header__menu__search">
+                <input type="search" placeholder="Style Name" class="header__menu__search__input">
+                <button type="submit" class="header__menu__search__button">
+                    <img src="img/start/1300/search_ico.png" alt="search-icon">
+                </button>
+            </form>
+        </nav>
+    </header>
+
+    <section class="catalog">
+            <div class="catalog__product__wrapper">
+                <div class="catalog__product__image__wrapper">
+                    <img class="catalog__product__image" src="img/start/1300/photo.png" alt="Only Skinny Jeans"
+                        title="Only Skinny Jeans">
+                    <span class="catalog__content__image__new">NEW</span>
+                    <img class="catalog__product__image--filter" src="img/start/1300/filter.png"
+                        alt="Only Skinny Jeans" title="Only Skinny Jeans">
+                </div>
+                <h3 class="catalog__content__title">Only Skinny Jeans</h3>
+                <p class="catalog__content__price">£65.50</p>
+            </div>
+            <div class="catalog__product__wrapper">
+                <div class="catalog__product__image__wrapper">
+                    <img class="catalog__product__image" src="img/start/1300/photo6.png" alt="Neck Knitted Jumper"
+                        title="Neck Knitted Jumper">
+                    <span class="catalog__content__image__new">NEW</span>
+                    <img class="catalog__product__image--filter" src="img/start/1300/filter.png"
+                        alt="Neck Knitted Jumper" title="Neck Knitted Jumper">
+                </div>
+                <h3 class="catalog__content__title">Neck Knitted Jumper</h3>
+                <p class="catalog__content__price">£76.25</p>
+            </div>
+            <div class="catalog__product__wrapper">
+                <div class="catalog__product__image__wrapper">
+                    <img class="catalog__product__image" src="img/start/1300/photo5.png"
+                        alt="Turtle Neck Jumper in Rib" title="Turtle Neck Jumper in Rib">
+                    <img class="catalog__product__image--filter" src="img/start/1300/filter.png"
+                        alt="Turtle Neck Jumper in Rib" title="Turtle Neck Jumper in Rib">
+                </div>
+                <h3 class="catalog__content__title">Turtle Neck Jumper in Rib</h3>
+                <p class="catalog__content__price">£130.25</p>
+            </div>
+            <div class="catalog__product__wrapper">
+                <div class="catalog__product__image__wrapper">
+                    <img class="catalog__product__image" src="img/start/1300/photo3.png"
+                        alt="With Patchwork Crochet" title="With Patchwork Crochet">
+                    <img class="catalog__product__image--filter" src="img/start/1300/filter.png"
+                        alt="With Patchwork Crochet" title="With Patchwork Crochet">
+                </div>
+                <h3 class="catalog__content__title">With Patchwork Crochet</h3>
+                <p class="catalog__content__price">£80.60</p>
+            </div>
+            <div class="catalog__sale-info">
+                <h2 class="catalog__sale-info__heading">Last weekend <span class="catalog__sale-info__heading__mark">extra 50%</span> off on all reduced boots and shoulder bags</h2>
+                <p class="catalog__sale-info__text">This offer is valid in-store and online. Prices displayed reflect this additional discount. this offer ends at 11:59 GMT on March 1st 2019</p>
+            </div>
+            <div class="catalog__product__wrapper">
+                <div class="catalog__product__image__wrapper">
+                    <img class="catalog__product__image" src="img/start/1300/photo.png" alt="Only Skinny Jeans"
+                        title="Only Skinny Jeans">
+                    <span class="catalog__content__image__new">NEW</span>
+                    <img class="catalog__product__image--filter" src="img/start/1300/filter.png"
+                        alt="Only Skinny Jeans" title="Only Skinny Jeans">
+                </div>
+                <h3 class="catalog__content__title">Only Skinny Jeans</h3>
+                <p class="catalog__content__price">£65.50</p>
+            </div>
+            <div class="catalog__product__wrapper">
+                <div class="catalog__product__image__wrapper">
+                    <img class="catalog__product__image" src="img/start/1300/photo6.png" alt="Neck Knitted Jumper"
+                        title="Neck Knitted Jumper">
+                    <span class="catalog__content__image__new">NEW</span>
+                    <img class="catalog__product__image--filter" src="img/start/1300/filter.png"
+                        alt="Neck Knitted Jumper" title="Neck Knitted Jumper">
+                </div>
+                <h3 class="catalog__content__title">Neck Knitted Jumper</h3>
+                <p class="catalog__content__price">£76.25</p>
+            </div>
+            <div class="catalog__product__wrapper">
+                <div class="catalog__product__image__wrapper">
+                    <img class="catalog__product__image" src="img/start/1300/photo5.png"
+                        alt="Turtle Neck Jumper in Rib" title="Turtle Neck Jumper in Rib">
+                    <img class="catalog__product__image--filter" src="img/start/1300/filter.png"
+                        alt="Turtle Neck Jumper in Rib" title="Turtle Neck Jumper in Rib">
+                </div>
+                <h3 class="catalog__content__title">Turtle Neck Jumper in Rib</h3>
+                <p class="catalog__content__price">£130.25</p>
+            </div>
+            <div class="catalog__product__wrapper">
+                <div class="catalog__product__image__wrapper">
+                    <img class="catalog__product__image" src="img/start/1300/photo3.png"
+                        alt="With Patchwork Crochet" title="With Patchwork Crochet">
+                    <img class="catalog__product__image--filter" src="img/start/1300/filter.png"
+                        alt="With Patchwork Crochet" title="With Patchwork Crochet">
+                </div>
+                <h3 class="catalog__content__title">With Patchwork Crochet</h3>
+                <p class="catalog__content__price">£80.60</p>
+            </div>
+            <div class="catalog__product__wrapper">
+                <div class="catalog__product__image__wrapper">
+                    <img class="catalog__product__image" src="img/start/1300/photo.png" alt="Only Skinny Jeans"
+                        title="Only Skinny Jeans">
+                    <span class="catalog__content__image__new">NEW</span>
+                    <img class="catalog__product__image--filter" src="img/start/1300/filter.png"
+                        alt="Only Skinny Jeans" title="Only Skinny Jeans">
+                </div>
+                <h3 class="catalog__content__title">Only Skinny Jeans</h3>
+                <p class="catalog__content__price">£65.50</p>
+            </div>
+            <div class="catalog__product__wrapper">
+                <div class="catalog__product__image__wrapper">
+                    <img class="catalog__product__image" src="img/start/1300/photo6.png" alt="Neck Knitted Jumper"
+                        title="Neck Knitted Jumper">
+                    <span class="catalog__content__image__new">NEW</span>
+                    <img class="catalog__product__image--filter" src="img/start/1300/filter.png"
+                        alt="Neck Knitted Jumper" title="Neck Knitted Jumper">
+                </div>
+                <h3 class="catalog__content__title">Neck Knitted Jumper</h3>
+                <p class="catalog__content__price">£76.25</p>
+            </div>
+            <div class="catalog__product__wrapper">
+                <div class="catalog__product__image__wrapper">
+                    <img class="catalog__product__image" src="img/start/1300/photo5.png"
+                        alt="Turtle Neck Jumper in Rib" title="Turtle Neck Jumper in Rib">
+                    <img class="catalog__product__image--filter" src="img/start/1300/filter.png"
+                        alt="Turtle Neck Jumper in Rib" title="Turtle Neck Jumper in Rib">
+                </div>
+                <h3 class="catalog__content__title">Turtle Neck Jumper in Rib</h3>
+                <p class="catalog__content__price">£130.25</p>
+            </div>
+            <div class="catalog__product__wrapper">
+                <div class="catalog__product__image__wrapper">
+                    <img class="catalog__product__image" src="img/start/1300/photo3.png"
+                        alt="With Patchwork Crochet" title="With Patchwork Crochet">
+                    <img class="catalog__product__image--filter" src="img/start/1300/filter.png"
+                        alt="With Patchwork Crochet" title="With Patchwork Crochet">
+                </div>
+                <h3 class="catalog__content__title">With Patchwork Crochet</h3>
+                <p class="catalog__content__price">£80.60</p>
+            </div>
+        </div>
+        <div class="catalog__button__wrapper"><button class="catalog____button">All arrivals</button></div>
+    </section>
+
+    <footer class="footer">
+        <section class="footer__info">
+            <nav class="footer__links">
+                <ul class="footer__links__list">
+                    <h4 class="footer__links__list__heading">Quick Links</h4>
+                    <li class="footer__links__list__element"><a href="#">Store locator</a></li>
+                    <li class="footer__links__list__element"><a href="#">Gift cards</a></li>
+                    <li class="footer__links__list__element"><a href="#">Size guide</a></li>
+                    <li class="footer__links__list__element"><a href="#">About us</a></li>
+                    <li class="footer__links__list__element"><a href="#">Support</a></li>
+                </ul>
+                <ul class="footer__links__list">
+                    <h4 class="footer__links__list__heading">Customer Care</h4>
+                    <li class="footer__links__list__element"><a href="#">Customer service</a></li>
+                    <li class="footer__links__list__element"><a href="#">Track my order</a></li>
+                    <li class="footer__links__list__element"><a href="#">Return policy</a></li>
+                    <li class="footer__links__list__element"><a href="#">Shipping & delivery</a></li>
+                    <li class="footer__links__list__element"><a href="#">Contuct us</a></li>
+                    <li class="footer__links__list__element"><a href="#">Careers</a></li>
+                </ul>
+            </nav>
+            <div class="footer__info__contact">
+                <div class="footer__info__contact__wrapper">
+                    <ul class="footer__info__contact__list">
+                        <h4 class="footer__info__contact__list__heading">Questions</h4>
+                        <li class="footer__info__contact__list__element">Tweet us <span
+                                class="footer__info__contact__list__element__id">@template</span></li>
+                    </ul>
+                    <ul class="footer__info__contact__list">
+                        <h4 class="footer__info__contact__list__heading">Order by phone</h4>
+                        <li class="footer__info__contact__list__element">8-800-409-47-12</li>
+                    </ul>
+                </div>
+                <p class="footer__info__contact__delivery">We have our own delivery service which operates in 23 major
+                    European cities. Delivery time - 3-5 days.</p>
+
+                <div class="footer__info__social__link__wrapper">
+                    <ul class="footer__share__list--mobile">
+                        <li class="footer__share__list__element"><a href="#">Legal notice</a></li>
+                        <li class="footer__share__list__element"><a href="#">Privacy policy</a></li>
+                        <li class="footer__share__list__element"><a href="#">Site map</a></li>
+                    </ul>
+                    <a class="footer__info__contact__social__link" href="#">
+                        <img src="img/start/1300/fb.png" alt="facebook-ico">
+                    </a>
+                    <a class="footer__info__contact__social__link" href="#">
+                        <img src="img/start/1300/twi.png" alt="twitter-ico">
+                    </a>
+                </div>
+
+            </div>
+        </section>
+        <section class="footer__share">
+            <p class="footer_share__copyright">© 2010–2015, The Template Group inc.</p>
+            <div class="footer_share__wrapper">
+                <h3 class="footer_share__share">Share</h3>
+                <p class="footer_share__counter">1 437</p>
+            </div>
+            <ul class="footer__share__list">
+                <li class="footer__share__list__element"><a href="#">Legal notice</a></li>
+                <li class="footer__share__list__element"><a href="#">Privacy policy</a></li>
+                <li class="footer__share__list__element"><a href="#">Site map</a></li>
+            </ul>
+        </section>
+
+    </footer>
 </body>
 </html>
