--- a/catalog.html
+++ b/catalog.html
@@ -20,9 +20,9 @@
                     <p class="header__login-bag__bag__text">Bag (0)</p>
                 </a>
             </div>
-            <div class="header__burger">&#8801;</div>
+            <div id = "header__burger" class="header__burger">&#8801;</div>
         </section>
-        <nav class="header__menu">
+        <nav id = "header__menu" class="header__menu">
             <ul class="header__menu__list">
                 <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="#">Women</a>
                 </li>
@@ -41,22 +41,36 @@
                 <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="#">Store
                         Locator</a></li>
             </ul>
-            <form action="" class="header__menu__search">
-                <input type="search" placeholder="Style Name" class="header__menu__search__input">
-                <button type="submit" class="header__menu__search__button">
+            <form action="" id = "header__menu__search" class="header__menu__search">
+                <input type="search" placeholder="Style Name" id = "header__menu__search__input" class="header__menu__search__input header__menu__search__input--tablet">
+                <a class="header__menu__search__button" id = "header__menu__search__button">
                     <img src="img/start/1300/search_ico.png" alt="search-icon">
-                </button>
+                </a>
             </form>
         </nav>
     </header>
-
+    <section class="filters">
+        <select name="fashion" id="filters__select__fashion" class="filter__select">
+            <option value="Not selected">Not selected</option>
+            <option value="Nail the 90s">Nail the 90s</option>
+            <option value="Casual style">Casual style</option>
+            <option value="New look">New look</option>
+            <option value="Sport">Sport</option>
+            <option value="Vintage">Vintage</option>
+            <option value="Classical style">Classical style</option>
+        </select>
+        <select name="fashion" id="filters__select__type" class="filter__select"></select>
+        <select name="fashion" id="filters__select__" class="filter__select"></select>
+        <select name="fashion" id="filters__select__fashion" class="filter__select"></select>
+        <select name="fashion" id="filters__select__fashion" class="filter__select"></select>
+    </section>
     <section class="catalog">
             <div class="catalog__product__wrapper">
                 <div class="catalog__product__image__wrapper">
-                    <img class="catalog__product__image" src="img/start/1300/photo.png" alt="Only Skinny Jeans"
+                    <img class="catalog__product__image" src="img/catalog/photo.png" alt="Only Skinny Jeans"
                         title="Only Skinny Jeans">
                     <span class="catalog__content__image__new">NEW</span>
-                    <img class="catalog__product__image--filter" src="img/start/1300/filter.png"
+                    <img class="catalog__product__image--filter" src="img/catalog/filter.png"
                         alt="Only Skinny Jeans" title="Only Skinny Jeans">
                 </div>
                 <h3 class="catalog__content__title">Only Skinny Jeans</h3>
@@ -64,10 +78,10 @@
             </div>
             <div class="catalog__product__wrapper">
                 <div class="catalog__product__image__wrapper">
-                    <img class="catalog__product__image" src="img/start/1300/photo6.png" alt="Neck Knitted Jumper"
+                    <img class="catalog__product__image" src="img/catalog/photo6.png" alt="Neck Knitted Jumper"
                         title="Neck Knitted Jumper">
                     <span class="catalog__content__image__new">NEW</span>
-                    <img class="catalog__product__image--filter" src="img/start/1300/filter.png"
+                    <img class="catalog__product__image--filter" src="img/catalog/filter.png"
                         alt="Neck Knitted Jumper" title="Neck Knitted Jumper">
                 </div>
                 <h3 class="catalog__content__title">Neck Knitted Jumper</h3>
@@ -75,9 +89,9 @@
             </div>
             <div class="catalog__product__wrapper">
                 <div class="catalog__product__image__wrapper">
-                    <img class="catalog__product__image" src="img/start/1300/photo5.png"
+                    <img class="catalog__product__image" src="img/catalog/photo5.png"
                         alt="Turtle Neck Jumper in Rib" title="Turtle Neck Jumper in Rib">
-                    <img class="catalog__product__image--filter" src="img/start/1300/filter.png"
+                    <img class="catalog__product__image--filter" src="img/catalog/filter.png"
                         alt="Turtle Neck Jumper in Rib" title="Turtle Neck Jumper in Rib">
                 </div>
                 <h3 class="catalog__content__title">Turtle Neck Jumper in Rib</h3>
@@ -85,9 +99,9 @@
             </div>
             <div class="catalog__product__wrapper">
                 <div class="catalog__product__image__wrapper">
-                    <img class="catalog__product__image" src="img/start/1300/photo3.png"
+                    <img class="catalog__product__image" src="img/catalog/photo3.png"
                         alt="With Patchwork Crochet" title="With Patchwork Crochet">
-                    <img class="catalog__product__image--filter" src="img/start/1300/filter.png"
+                    <img class="catalog__product__image--filter" src="img/catalog/filter.png"
                         alt="With Patchwork Crochet" title="With Patchwork Crochet">
                 </div>
                 <h3 class="catalog__content__title">With Patchwork Crochet</h3>
@@ -99,92 +113,107 @@
             </div>
             <div class="catalog__product__wrapper">
                 <div class="catalog__product__image__wrapper">
-                    <img class="catalog__product__image" src="img/start/1300/photo.png" alt="Only Skinny Jeans"
-                        title="Only Skinny Jeans">
-                    <span class="catalog__content__image__new">NEW</span>
-                    <img class="catalog__product__image--filter" src="img/start/1300/filter.png"
-                        alt="Only Skinny Jeans" title="Only Skinny Jeans">
+                    <img class="catalog__product__image" src="img/catalog/photo2.png" alt="Levi’s Jeans for women"
+                        title="Levi’s Jeans for women">
+                    <img class="catalog__product__image--filter" src="img/catalog/filter.png"
+                        alt="Levi’s Jeans for women" title="Levi’s Jeans for women">
                 </div>
-                <h3 class="catalog__content__title">Only Skinny Jeans</h3>
-                <p class="catalog__content__price">£65.50</p>
+                <h3 class="catalog__content__title">Levi’s Jeans for women</h3>
+                <p class="catalog__content__price">£95.50</p>
             </div>
             <div class="catalog__product__wrapper">
                 <div class="catalog__product__image__wrapper">
-                    <img class="catalog__product__image" src="img/start/1300/photo6.png" alt="Neck Knitted Jumper"
-                        title="Neck Knitted Jumper">
-                    <span class="catalog__content__image__new">NEW</span>
-                    <img class="catalog__product__image--filter" src="img/start/1300/filter.png"
-                        alt="Neck Knitted Jumper" title="Neck Knitted Jumper">
+                    <img class="catalog__product__image" src="img/catalog/photo13.png" alt="Boyfriend T-Shirt with Bohemian Print"
+                        title="Boyfriend T-Shirt with Bohemian Print">
+                    <img class="catalog__product__image--filter" src="img/catalog/filter.png"
+                        alt="Boyfriend T-Shirt with Bohemian Print" title="Boyfriend T-Shirt with Bohemian Print">
                 </div>
-                <h3 class="catalog__content__title">Neck Knitted Jumper</h3>
-                <p class="catalog__content__price">£76.25</p>
+                <h3 class="catalog__content__title">Boyfriend T-Shirt with Bohemian Print</h3>
+                <p class="catalog__content__price"><span class = "catalog__content__price__old">£120.00<img class="catalog__content__price__old__strikeout" src="img/catalog/strikeout.png" alt="strikeout"></span>£76.25</p>
             </div>
             <div class="catalog__product__wrapper">
                 <div class="catalog__product__image__wrapper">
-                    <img class="catalog__product__image" src="img/start/1300/photo5.png"
-                        alt="Turtle Neck Jumper in Rib" title="Turtle Neck Jumper in Rib">
-                    <img class="catalog__product__image--filter" src="img/start/1300/filter.png"
-                        alt="Turtle Neck Jumper in Rib" title="Turtle Neck Jumper in Rib">
+                    <img class="catalog__product__image" src="img/catalog/photo12.png"
+                        alt="Colour Block" title="Colour Block">
+                    <img class="catalog__product__image--filter" src="img/catalog/filter.png"
+                        alt="Colour Block" title="Colour Block">
                 </div>
-                <h3 class="catalog__content__title">Turtle Neck Jumper in Rib</h3>
-                <p class="catalog__content__price">£130.25</p>
+                <h3 class="catalog__content__title">Colour Block</h3>
+                <p class="catalog__content__price">£550.50</p>
             </div>
             <div class="catalog__product__wrapper">
                 <div class="catalog__product__image__wrapper">
-                    <img class="catalog__product__image" src="img/start/1300/photo3.png"
-                        alt="With Patchwork Crochet" title="With Patchwork Crochet">
-                    <img class="catalog__product__image--filter" src="img/start/1300/filter.png"
-                        alt="With Patchwork Crochet" title="With Patchwork Crochet">
+                    <img class="catalog__product__image" src="img/catalog/photo11.png"
+                        alt="Monki Festval Knitted" title="Monki Festval Knitted">
+                    <img class="catalog__product__image--filter" src="img/catalog/filter.png"
+                        alt="Monki Festval Knitted" title="Monki Festval Knitted">
                 </div>
-                <h3 class="catalog__content__title">With Patchwork Crochet</h3>
-                <p class="catalog__content__price">£80.60</p>
+                <h3 class="catalog__content__title">Monki Festval Knitted</h3>
+                <p class="catalog__content__price">£24.75</p>
             </div>
             <div class="catalog__product__wrapper">
                 <div class="catalog__product__image__wrapper">
-                    <img class="catalog__product__image" src="img/start/1300/photo.png" alt="Only Skinny Jeans"
-                        title="Only Skinny Jeans">
-                    <span class="catalog__content__image__new">NEW</span>
-                    <img class="catalog__product__image--filter" src="img/start/1300/filter.png"
-                        alt="Only Skinny Jeans" title="Only Skinny Jeans">
+                    <img class="catalog__product__image" src="img/catalog/photo10.png" alt="Oversized Cardigan"
+                        title="Oversized Cardigan">
+                    <img class="catalog__product__image--filter" src="img/catalog/filter.png"
+                        alt="Oversized Cardigan" title="Oversized Cardigan">
                 </div>
-                <h3 class="catalog__content__title">Only Skinny Jeans</h3>
-                <p class="catalog__content__price">£65.50</p>
+                <h3 class="catalog__content__title">Oversized Cardigan</h3>
+                <p class="catalog__content__price">£90.00</p>
             </div>
             <div class="catalog__product__wrapper">
                 <div class="catalog__product__image__wrapper">
-                    <img class="catalog__product__image" src="img/start/1300/photo6.png" alt="Neck Knitted Jumper"
-                        title="Neck Knitted Jumper">
-                    <span class="catalog__content__image__new">NEW</span>
-                    <img class="catalog__product__image--filter" src="img/start/1300/filter.png"
-                        alt="Neck Knitted Jumper" title="Neck Knitted Jumper">
+                    <img class="catalog__product__image" src="img/catalog/photo9.png" alt="Paul & Joe Sister Jumper  with Neon Trims"
+                        title="Paul & Joe Sister Jumper  with Neon Trims">
+                    <img class="catalog__product__image--filter" src="img/catalog/filter.png"
+                        alt="Paul & Joe Sister Jumper  with Neon Trims" title="Paul & Joe Sister Jumper  with Neon Trims">
                 </div>
-                <h3 class="catalog__content__title">Neck Knitted Jumper</h3>
-                <p class="catalog__content__price">£76.25</p>
+                <h3 class="catalog__content__title">Paul & Joe Sister Jumper  with Neon Trims</h3>
+                <p class="catalog__content__price">£19.75</p>
             </div>
             <div class="catalog__product__wrapper">
                 <div class="catalog__product__image__wrapper">
-                    <img class="catalog__product__image" src="img/start/1300/photo5.png"
-                        alt="Turtle Neck Jumper in Rib" title="Turtle Neck Jumper in Rib">
-                    <img class="catalog__product__image--filter" src="img/start/1300/filter.png"
-                        alt="Turtle Neck Jumper in Rib" title="Turtle Neck Jumper in Rib">
+                    <img class="catalog__product__image" src="img/catalog/photo8.png"
+                        alt="Only Busted Knee Jean" title="Only Busted Knee Jean">
+                    <img class="catalog__product__image--filter" src="img/catalog/filter.png"
+                        alt="Only Busted Knee Jean" title="Only Busted Knee Jean">
                 </div>
-                <h3 class="catalog__content__title">Turtle Neck Jumper in Rib</h3>
-                <p class="catalog__content__price">£130.25</p>
+                <h3 class="catalog__content__title">Only Busted Knee Jean</h3>
+                <p class="catalog__content__price">£140.50</p>
             </div>
             <div class="catalog__product__wrapper">
                 <div class="catalog__product__image__wrapper">
-                    <img class="catalog__product__image" src="img/start/1300/photo3.png"
-                        alt="With Patchwork Crochet" title="With Patchwork Crochet">
-                    <img class="catalog__product__image--filter" src="img/start/1300/filter.png"
-                        alt="With Patchwork Crochet" title="With Patchwork Crochet">
+                    <img class="catalog__product__image" src="img/catalog/photo7.png"
+                        alt="Boyfriend T-Shirt with Paris Print" title="Boyfriend T-Shirt with Paris Print">
+                    <img class="catalog__product__image--filter" src="img/catalog/filter.png"
+                        alt="Boyfriend T-Shirt with Paris Print" title="Boyfriend T-Shirt with Paris Print">
                 </div>
-                <h3 class="catalog__content__title">With Patchwork Crochet</h3>
-                <p class="catalog__content__price">£80.60</p>
+                <h3 class="catalog__content__title">Boyfriend T-Shirt with Paris Print</h3>
+                <p class="catalog__content__price">£87.75</p>
             </div>
         </div>
-        <div class="catalog__button__wrapper"><button class="catalog____button">All arrivals</button></div>
+        <div class="catalog__button__wrapper"><button class="catalog____button">Show more</button></div>
     </section>
-
+    <section class="banners">
+        <a href="#" class="banners__content banners__content--adidas">
+            <div class="banners__content__text__container">
+                <p class="banners__content__title"> Adidas blue</p>
+                <p class="banners__content__text"> For men</p>
+            </div>
+        </a>
+        <a href="#" class="banners__content banners__content--repair">
+            <div class="banners__content__text__container banners__content__text__container--low">
+                <p class="banners__content__title banners__content__title--center">Repair Patches</p>
+                <p class="banners__content__text banners__content__title--center">£150.50</p>
+            </div>
+        </a>        
+        <a href="#" class="banners__content banners__content--bag">
+            <div class="banners__content__text__container banners__content__text__container--low">
+                <p class="banners__content__title banners__content__title--bag banners__content__title--center">Sale</p>
+                <p class="banners__content__sale banners__content__title--center">-70%</p>
+            </div>
+        </a>
+    </section>
     <footer class="footer">
         <section class="footer__info">
             <nav class="footer__links">
@@ -249,7 +278,7 @@
                 <li class="footer__share__list__element"><a href="#">Site map</a></li>
             </ul>
         </section>
-
+        <script src="js/start.js"></script>
     </footer>
 </body>
 </html>
