--- a/item.html
+++ b/item.html
@@ -27,21 +27,21 @@
         </section>
         <nav id="header__menu" class="header__menu">
             <ul class="header__menu__list">
-                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="#">Women</a>
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="catalog.html">Women</a>
                 </li>
-                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="#">Men</a>
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="catalog.html">Men</a>
                 </li>
                 <li class="header__menu__list__element"><a class="header__menu__list__element__link"
-                        href="#">Handbags</a></li>
+                        href="catalog.html">Handbags</a></li>
                 <li class="header__menu__list__element"><a class="header__menu__list__element__link"
-                        href="#">Accessories</a></li>
-                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="#">Sale</a>
+                        href="catalog.html">Accessories</a></li>
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="catalog.html">Sale</a>
                 </li>
-                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="#">New
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="catalog.html">New
                         Arrivals</a></li>
                 <li class="header__menu__list__element"><a class="header__menu__list__element__link"
-                        href="#">Clearance</a></li>
-                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="#">Store
+                        href="catalog.html">Clearance</a></li>
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="catalog.html">Store
                         Locator</a></li>
             </ul>
             <form action="" id="header__menu__search" class="header__menu__search">
