--- a/start.html
+++ b/start.html
@@ -22,37 +22,38 @@
                     <p class="header__login-bag__bag__text">Bag (0)</p>
                 </a>
             </div>
-            <div id = "header__burger" class="header__burger">&#8801;</div>
+            <div id="header__burger" class="header__burger">&#8801;</div>
         </section>
-        <nav id = "header__menu" class="header__menu">
+        <nav id="header__menu" class="header__menu">
             <ul class="header__menu__list">
-                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="#">Women</a>
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="catalog.html">Women</a>
                 </li>
-                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="#">Men</a>
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="catalog.html">Men</a>
                 </li>
                 <li class="header__menu__list__element"><a class="header__menu__list__element__link"
-                        href="#">Handbags</a></li>
+                        href="catalog.html">Handbags</a></li>
                 <li class="header__menu__list__element"><a class="header__menu__list__element__link"
-                        href="#">Accessories</a></li>
-                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="#">Sale</a>
+                        href="catalog.html">Accessories</a></li>
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="catalog.html">Sale</a>
                 </li>
-                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="#">New
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="catalog.html">New
                         Arrivals</a></li>
                 <li class="header__menu__list__element"><a class="header__menu__list__element__link"
-                        href="#">Clearance</a></li>
-                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="#">Store
+                        href="catalog.html">Clearance</a></li>
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="catalog.html">Store
                         Locator</a></li>
             </ul>
-            <form action="" id = "header__menu__search" class="header__menu__search">
-                <input type="search" placeholder="Style Name" id = "header__menu__search__input" class="header__menu__search__input header__menu__search__input--tablet">
-                <a class="header__menu__search__button" id = "header__menu__search__button">
+            <form action="" id="header__menu__search" class="header__menu__search">
+                <input type="search" placeholder="Style Name" id="header__menu__search__input"
+                    class="header__menu__search__input header__menu__search__input--tablet">
+                <a class="header__menu__search__button" id="header__menu__search__button">
                     <img src="img/start/1300/search_ico.png" alt="search-icon">
                 </a>
             </form>
         </nav>
     </header>
     <section class="banners">
-        <a href="#" class="banners__content banners__content--nike">
+        <a href="item.html" class="banners__content banners__content--nike">
             <div class="banners__content__text__container">
                 <p class="banners__content__title"> Nike Red</p>
             </div>
@@ -71,9 +72,11 @@
         <div class="bestOffer__content">
             <div class="bestOffer__content__wrapper">
                 <img class="bestOffer__content__angle" alt="angle-up" src="img/start/1300/angle-up.png">
-                <div class="bestOffer__content__image__wrapper bestOffer__content__image__wrapper--first">
-                    <span class="bestOffer__content__image__new">NEW</span>
-                </div>
+                <a href="item.html">
+                    <div class="bestOffer__content__image__wrapper bestOffer__content__image__wrapper--first">
+                        <span class="bestOffer__content__image__new">NEW</span>
+                    </div>
+                </a>
                 <h3 class="bestOffer__content__title">Only Skinny Jeans</h3>
                 <p class="bestOffer__content__price">£65.50</p>
                 <img class="bestOffer__content__angle" alt="angle-down" src="img/start/1300/angle-down.png">
@@ -81,9 +84,11 @@
             <span class="bestOffer__content__symbol">+</span>
             <div class="bestOffer__content__wrapper">
                 <img class="bestOffer__content__angle" alt="angle-up" src="img/start/1300/angle-up.png">
+                <a href="item.html">
                 <div class="bestOffer__content__image__wrapper  bestOffer__content__image__wrapper--second">
 
                 </div>
+                </a>
                 <h3 class="bestOffer__content__title">Levi’s Jeans for women</h3>
                 <p class="bestOffer__content__price">£95.50</p>
                 <img class="bestOffer__content__angle" alt="angle-down" src="img/start/1300/angle-down.png">
@@ -95,10 +100,10 @@
                         alt="strikeout">
                 </p>
                 <p class="bestOffer__content__total__new">£146.00</p>
-                <button class="bestOffer__content__total__bag-button">Add to bag</button>
+                <a href="shopping-bag.html"><button class="bestOffer__content__total__bag-button">Add to bag</button></a>
             </div>
         </div>
-        <button class="bestOffer__bag-button">Add to bag</button>
+        <a href="shopping-bag.html"><button class="bestOffer__bag-button">Add to bag</button></a>
     </section>
     <div class="line__wrapper"></div>
 
@@ -106,44 +111,44 @@
         <h2 class="newArrivals__heading">New Arrivals</h2>
         <div class="newArrivals__content">
             <div class="newArrivals__product__wrapper">
-                <div class="newArrivals__product__image__wrapper">
+                <a href="item.html" class="newArrivals__product__image__wrapper">
                     <img class="newArrivals__product__image" src="img/start/1300/photo.png" alt="Only Skinny Jeans"
                         title="Only Skinny Jeans">
                     <span class="newArrivals__content__image__new">NEW</span>
                     <img class="newArrivals__product__image--filter" src="img/start/1300/filter.png"
                         alt="Only Skinny Jeans" title="Only Skinny Jeans">
-                </div>
+                </a>
                 <h3 class="newArrivals__content__title">Only Skinny Jeans</h3>
                 <p class="newArrivals__content__price">£65.50</p>
             </div>
             <div class="newArrivals__product__wrapper">
-                <div class="newArrivals__product__image__wrapper">
+                <a href="item.html" class="newArrivals__product__image__wrapper">
                     <img class="newArrivals__product__image" src="img/start/1300/photo6.png" alt="Neck Knitted Jumper"
                         title="Neck Knitted Jumper">
                     <span class="newArrivals__content__image__new">NEW</span>
                     <img class="newArrivals__product__image--filter" src="img/start/1300/filter.png"
                         alt="Neck Knitted Jumper" title="Neck Knitted Jumper">
-                </div>
+                </a>
                 <h3 class="newArrivals__content__title">Neck Knitted Jumper</h3>
                 <p class="newArrivals__content__price">£76.25</p>
             </div>
             <div class="newArrivals__product__wrapper">
-                <div class="newArrivals__product__image__wrapper">
+                <a href="item.html" class="newArrivals__product__image__wrapper">
                     <img class="newArrivals__product__image" src="img/start/1300/photo5.png"
                         alt="Turtle Neck Jumper in Rib" title="Turtle Neck Jumper in Rib">
                     <img class="newArrivals__product__image--filter" src="img/start/1300/filter.png"
                         alt="Turtle Neck Jumper in Rib" title="Turtle Neck Jumper in Rib">
-                </div>
+                </a>
                 <h3 class="newArrivals__content__title">Turtle Neck Jumper in Rib</h3>
                 <p class="newArrivals__content__price">£130.25</p>
             </div>
             <div class="newArrivals__product__wrapper">
-                <div class="newArrivals__product__image__wrapper">
+                <a href="item.html" class="newArrivals__product__image__wrapper">
                     <img class="newArrivals__product__image" src="img/start/1300/photo3.png"
                         alt="With Patchwork Crochet" title="With Patchwork Crochet">
                     <img class="newArrivals__product__image--filter" src="img/start/1300/filter.png"
                         alt="With Patchwork Crochet" title="With Patchwork Crochet">
-                </div>
+                </a>
                 <h3 class="newArrivals__content__title">With Patchwork Crochet</h3>
                 <p class="newArrivals__content__price">£80.60</p>
             </div>
