--- a/catalog.html
+++ b/catalog.html
@@ -20,30 +20,31 @@
                     <p class="header__login-bag__bag__text">Bag (0)</p>
                 </a>
             </div>
-            <div id = "header__burger" class="header__burger">&#8801;</div>
+            <div id="header__burger" class="header__burger">&#8801;</div>
         </section>
-        <nav id = "header__menu" class="header__menu">
+        <nav id="header__menu" class="header__menu">
             <ul class="header__menu__list">
-                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="#">Women</a>
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="catalog.html">Women</a>
                 </li>
-                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="#">Men</a>
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="catalog.html">Men</a>
                 </li>
                 <li class="header__menu__list__element"><a class="header__menu__list__element__link"
-                        href="#">Handbags</a></li>
+                        href="catalog.html">Handbags</a></li>
                 <li class="header__menu__list__element"><a class="header__menu__list__element__link"
-                        href="#">Accessories</a></li>
-                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="#">Sale</a>
+                        href="catalog.html">Accessories</a></li>
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="catalog.html">Sale</a>
                 </li>
-                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="#">New
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="catalog.html">New
                         Arrivals</a></li>
                 <li class="header__menu__list__element"><a class="header__menu__list__element__link"
-                        href="#">Clearance</a></li>
-                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="#">Store
+                        href="catalog.html">Clearance</a></li>
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="catalog.html">Store
                         Locator</a></li>
             </ul>
-            <form action="" id = "header__menu__search" class="header__menu__search">
-                <input type="search" placeholder="Style Name" id = "header__menu__search__input" class="header__menu__search__input header__menu__search__input--tablet">
-                <a class="header__menu__search__button" id = "header__menu__search__button">
+            <form action="" id="header__menu__search" class="header__menu__search">
+                <input type="search" placeholder="Style Name" id="header__menu__search__input"
+                    class="header__menu__search__input header__menu__search__input--tablet">
+                <a class="header__menu__search__button" id="header__menu__search__button">
                     <img src="img/start/1300/search_ico.png" alt="search-icon">
                 </a>
             </form>
