--- a/shopping-bag.html
+++ b/shopping-bag.html
@@ -1,11 +1,231 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping bag</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/shopping-bag.css">
 </head>
+
 <body>
-    
+    <header class="header">
+        <section class="header__login-bag">
+            <h1 class="header__login-bag__logo">Template</h1>
+            <h1 class="header__login-bag__logo--mobile">TL</h1>
+            <div class="header__login-bag__wrapper">
+                <a href="#" class="header__login-bag__login">E-mail sing up</a>
+                <a href="#" class="header__login-bag__bag__wrapper">
+                    <img class="header__login-bag__bag__icon" width="12" height="12" alt="bag-icon"
+                        src="img/start/1300/ico_bag.png">
+                    <p class="header__login-bag__bag__text">Bag (0)</p>
+                </a>
+            </div>
+            <div id="header__burger" class="header__burger">&#8801;</div>
+        </section>
+        <nav id="header__menu" class="header__menu">
+            <ul class="header__menu__list">
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link"
+                        href="catalog.html">Women</a>
+                </li>
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link"
+                        href="catalog.html">Men</a>
+                </li>
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link"
+                        href="catalog.html">Handbags</a></li>
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link"
+                        href="catalog.html">Accessories</a></li>
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link"
+                        href="catalog.html">Sale</a>
+                </li>
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link"
+                        href="catalog.html">New
+                        Arrivals</a></li>
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link"
+                        href="catalog.html">Clearance</a></li>
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link"
+                        href="catalog.html">Store
+                        Locator</a></li>
+            </ul>
+            <form action="" id="header__menu__search" class="header__menu__search">
+                <input type="search" placeholder="Style Name" id="header__menu__search__input"
+                    class="header__menu__search__input header__menu__search__input--tablet">
+                <a class="header__menu__search__button" id="header__menu__search__button">
+                    <img src="img/start/1300/search_ico.png" alt="search-icon">
+                </a>
+            </form>
+        </nav>
+    </header>
+    <div class="line__wrapper"></div>
+    <section class="bag">
+        <h2 class="bag__heading">Shopping bag</h2>
+        <div class="line__wrapper"></div>
+        <div class="bag-content">
+            <h2 class="bag__heading bag__heading--empty">Bag is empty</h2>
+            <div class="bag-content__item">
+                <div class="bag-content__wrapper bag-content__wrapper--image">
+                    <img class="bag-content__image" src="img/catalog/photo.png" alt="Only Skinny Jeans"
+                        title="Only Skinny Jeans">
+                    <span class="bag-content__new">NEW</span>
+                    <img class="bag-content__filter" src="img/catalog/filteredit.png" alt="Only Skinny Jeans"
+                        title="Only Skinny Jeans">
+                </div>
+                <div class="bag-content__wrapper">
+                    <h3 class="bag-content__title">Only Skinny Jeans</h3>
+                    <p class="bag-content__price">£65.50</p>
+                    <div class="bag-content__wrap">
+                        <p class="bag-content__text">Color: Philipa wash</p>
+                        <p class="bag-content__text">Size: UK 17</p>
+                        <p class="bag-content__text">Quantity: <span class="bag-content__icon">&#06;</span><span
+                                class="bag-content__quantity">1</span><span class="bag-content__icon">+</span></p>
+                    </div>
+                    <button class="bag-content__remove">Remove item</button>
+                </div>
+            </div>
+            <div class="bag-content__item">
+                <div class="bag-content__wrapper bag-content__wrapper--image">
+                    <img class="bag-content__image" src="img/catalog/photo9.png"
+                        alt="Paul & Joe Sister Jumper with Neon Trims" title="Paul & Joe Sister Jumper with Neon Trims">
+                    <img class="bag-content__filter" src="img/catalog/filteredit.png"
+                        alt="Paul & Joe Sister Jumper with Neon Trims" title="Paul & Joe Sister Jumper with Neon Trims">
+                </div>
+                <div class="bag-content__wrapper">
+                    <h3 class="bag-content__title">Paul & Joe Sister Jumper with Neon Trims</h3>
+                    <p class="bag-content__price">£19.75</p>
+                    <div class="bag-content__wrap">
+                        <p class="bag-content__text">Color: Blue</p>
+                        <p class="bag-content__text">Size: UK 18</p>
+                        <p class="bag-content__text">Quantity: <span class="bag-content__icon">&#06;</span><span
+                                class="bag-content__quantity">1</span><span class="bag-content__icon">+</span></p>
+                    </div>
+                    <button class="bag-content__remove">Remove item</button>
+                </div>
+            </div>
+            <div class="bag-content__item">
+                <div class="bag-content__wrapper bag-content__wrapper--image">
+                    <img class="bag-content__image" src="img/catalog/photo13.png"
+                        alt="Boyfriend T-Shirt with Bohemian Print" title="Boyfriend T-Shirt with Bohemian Print">
+                    <img class="bag-content__filter" src="img/catalog/filteredit.png"
+                        alt="Boyfriend T-Shirt with Bohemian Print" title="Boyfriend T-Shirt with Bohemian Print">
+                </div>
+                <div class="bag-content__wrapper">
+                    <h3 class="bag-content__title">Boyfriend T-Shirt with Bohemian Print</h3>
+                    <p class="bag-content__price">£90.00</p>
+                    <div class="bag-content__wrap">
+                        <p class="bag-content__text">Color: Black</p>
+                        <p class="bag-content__text">Size: UK 18</p>
+                        <p class="bag-content__text">Quantity: <span class="bag-content__icon">&#06;</span><span
+                                class="bag-content__quantity">1</span><span class="bag-content__icon">+</span></p>
+                    </div>
+                    <button class="bag-content__remove">Remove item</button>
+                </div>
+            </div>
+            <div class="bag-content__item">
+                <div class="bag-content__wrapper bag-content__wrapper--image">
+                    <img class="bag-content__image" src="img/catalog/photo6.png" alt="Neck Knitted Jumper"
+                        title="Neck Knitted Jumper">
+                    <span class="bag-content__new">NEW</span>
+                    <img class="bag-content__filter" src="img/catalog/filteredit.png" alt="Neck Knitted Jumper"
+                        title="Neck Knitted Jumper">
+                </div>
+                <div class="bag-content__wrapper">
+                    <h3 class="bag-content__title">Neck Knitted Jumper</h3>
+                    <p class="bag-content__price">£65.50</p>
+                    <div class="bag-content__wrap">
+                        <p class="bag-content__text">Color: Green</p>
+                        <p class="bag-content__text">Size: UK 19</p>
+                        <p class="bag-content__text">Quantity: <span class="bag-content__icon">&#06;</span><span
+                                class="bag-content__quantity">1</span><span class="bag-content__icon">+</span></p>
+                    </div>
+                    <button class="bag-content__remove">Remove item</button>
+                </div>
+            </div>
+        </div>
+        <div class="line__wrapper"></div>
+        <p class="bag__info">You've qualified for Free UK Next Day Delivery on your order. Don't forget to enter the
+            code <span class="bag__mark">nexday</span> at checkout</p>
+        <div class="bag-total">
+            <div class="bag-total__wrap">
+                <button class="bag-total__clear">Empty bag</button>
+            </div>
+            <div class="bag-total__wrap">
+                <button class="bag-total__checkout">Checkout</button>
+            </div>
+            <div class="bag-total__wrap">
+                <p class="bag-total__discount">Applied discount: £15.00</p>
+                <p class="bag-total__price">Total price: £236.50</p>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <section class="footer__info">
+            <nav class="footer__links">
+                <ul class="footer__links__list">
+                    <h4 class="footer__links__list__heading">Quick Links</h4>
+                    <li class="footer__links__list__element"><a href="#">Store locator</a></li>
+                    <li class="footer__links__list__element"><a href="#">Gift cards</a></li>
+                    <li class="footer__links__list__element"><a href="#">Size guide</a></li>
+                    <li class="footer__links__list__element"><a href="#">About us</a></li>
+                    <li class="footer__links__list__element"><a href="#">Support</a></li>
+                </ul>
+                <ul class="footer__links__list">
+                    <h4 class="footer__links__list__heading">Customer Care</h4>
+                    <li class="footer__links__list__element"><a href="#">Customer service</a></li>
+                    <li class="footer__links__list__element"><a href="#">Track my order</a></li>
+                    <li class="footer__links__list__element"><a href="#">Return policy</a></li>
+                    <li class="footer__links__list__element"><a href="#">Shipping & delivery</a></li>
+                    <li class="footer__links__list__element"><a href="#">Contuct us</a></li>
+                    <li class="footer__links__list__element"><a href="#">Careers</a></li>
+                </ul>
+            </nav>
+            <div class="footer__info__contact">
+                <div class="footer__info__contact__wrapper">
+                    <ul class="footer__info__contact__list">
+                        <h4 class="footer__info__contact__list__heading">Questions</h4>
+                        <li class="footer__info__contact__list__element">Tweet us <span
+                                class="footer__info__contact__list__element__id">@template</span></li>
+                    </ul>
+                    <ul class="footer__info__contact__list">
+                        <h4 class="footer__info__contact__list__heading">Order by phone</h4>
+                        <li class="footer__info__contact__list__element">8-800-409-47-12</li>
+                    </ul>
+                </div>
+                <p class="footer__info__contact__delivery">We have our own delivery service which operates in 23 major
+                    European cities. Delivery time - 3-5 days.</p>
+
+                <div class="footer__info__social__link__wrapper">
+                    <ul class="footer__share__list--mobile">
+                        <li class="footer__share__list__element"><a href="#">Legal notice</a></li>
+                        <li class="footer__share__list__element"><a href="#">Privacy policy</a></li>
+                        <li class="footer__share__list__element"><a href="#">Site map</a></li>
+                    </ul>
+                    <a class="footer__info__contact__social__link" href="#">
+                        <img src="img/start/1300/fb.png" alt="facebook-ico">
+                    </a>
+                    <a class="footer__info__contact__social__link" href="#">
+                        <img src="img/start/1300/twi.png" alt="twitter-ico">
+                    </a>
+                </div>
+
+            </div>
+        </section>
+        <section class="footer__share">
+            <p class="footer_share__copyright">© 2010–2015, The Template Group inc.</p>
+            <div class="footer_share__wrapper">
+                <h3 class="footer_share__share">Share</h3>
+                <p class="footer_share__counter">1 437</p>
+            </div>
+            <ul class="footer__share__list">
+                <li class="footer__share__list__element"><a href="#">Legal notice</a></li>
+                <li class="footer__share__list__element"><a href="#">Privacy policy</a></li>
+                <li class="footer__share__list__element"><a href="#">Site map</a></li>
+            </ul>
+        </section>
+
+    </footer>
+    <script src="js/start.js"></script>
 </body>
+
 </html>
