--- a/shopping-bag.html
+++ b/shopping-bag.html
@@ -17,10 +17,10 @@
             <h1 class="header__login-bag__logo--mobile">TL</h1>
             <div class="header__login-bag__wrapper">
                 <a href="#" class="header__login-bag__login">E-mail sing up</a>
-                <a href="#" class="header__login-bag__bag__wrapper">
+                <a href="shopping-bag.html" class="header__login-bag__bag__wrapper">
                     <img class="header__login-bag__bag__icon" width="12" height="12" alt="bag-icon"
                         src="img/start/1300/ico_bag.png">
-                    <p class="header__login-bag__bag__text">Bag (0)</p>
+                    <p class="header__login-bag__bag__text">Bag £236.50 (4)</p>
                 </a>
             </div>
             <div id="header__burger" class="header__burger">&#8801;</div>
@@ -154,8 +154,8 @@
                 <button class="bag-total__checkout">Checkout</button>
             </div>
             <div class="bag-total__wrap">
-                <p class="bag-total__discount">Applied discount: £15.00</p>
-                <p class="bag-total__price">Total price: £236.50</p>
+                <p class="bag-total__discount">Applied discount: <span class="bag-total__discountmark">£15.00</span></p>
+                <p class="bag-total__price">Total price: <span class="bag-total__pricemark">£236.50</span></p>
             </div>
         </div>
     </section>
