--- a/start.html
+++ b/start.html
@@ -16,10 +16,10 @@
             <h1 class="header__login-bag__logo--mobile">TL</h1>
             <div class="header__login-bag__wrapper">
                 <a href="#" class="header__login-bag__login">E-mail sing up</a>
-                <a href="#" class="header__login-bag__bag__wrapper">
+                <a href="shopping-bag.html" class="header__login-bag__bag__wrapper">
                     <img class="header__login-bag__bag__icon" width="12" height="12" alt="bag-icon"
                         src="img/start/1300/ico_bag.png">
-                    <p class="header__login-bag__bag__text">Bag (0)</p>
+                    <p class="header__login-bag__bag__text">Bag £236.50 (4)</p>
                 </a>
             </div>
             <div id="header__burger" class="header__burger">&#8801;</div>
