--- a/item.html
+++ b/item.html
@@ -17,10 +17,10 @@
             <h1 class="header__login-bag__logo--mobile">TL</h1>
             <div class="header__login-bag__wrapper">
                 <a href="#" class="header__login-bag__login">E-mail sing up</a>
-                <a href="#" class="header__login-bag__bag__wrapper">
+                <a href="shopping-bag.html" class="header__login-bag__bag__wrapper">
                     <img class="header__login-bag__bag__icon" width="12" height="12" alt="bag-icon"
                         src="img/start/1300/ico_bag.png">
-                    <p class="header__login-bag__bag__text">Bag (0)</p>
+                    <p class="header__login-bag__bag__text">Bag £<span id="bag_totalPrice">236.50</span> (<span id="bag_totalQuantity">4</span>)</p>
                 </a>
             </div>
             <div id="header__burger" class="header__burger">&#8801;</div>
@@ -82,7 +82,7 @@
                 <h2 class="item__heading">Dark classic fit suit</h2>
                 <p class="item__price--mobile">£180.60</p>
                 <p class="item__info">Featuring fine Italian wool, this elegant suit has pick-stitch edging, cascade buttons at the cuffs and a subtle stripe pattern throughout. </p>
-                <p class="item__price">£180.60</p>
+                <p class="item__price" id = "item__price">£180.60</p>
                 <div class="item__select">
                     <p class="item__text">Size:</p>
                     <div class="item__wrapper">
@@ -110,7 +110,7 @@
                         <label class="item__label" for="item__color--blue">Blue</label>
                     </div>
                 </div>
-                <button class="item__button">Add to bag</button>
+                <button class="item__button" id = "item__button">Add to bag</button>
             </div>
         </div>
     </section>
